[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-bot"
version = "1.0.0"
dependencies = [
    "python-telegram-bot==20.7",
    "python-dotenv==1.0.0",
    "sqlalchemy==2.0.23",
    "apscheduler==3.10.4",
    "aiohttp==3.9.1"
]

[project.optional-dependencies]
dev = ["pytest", "black"]

[tool.setuptools]
packages = ["."]